# MirachEngine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
mirachEngine/: CMakeLists.txt  mirach.lib
mirachEngine/cmake/: mirach-assets.cmake  mirach-build.cmake  mirach-config.cmake  mirach-options.cmake
mirachEngine/dependencies/cpm/: cpm-config.cmake
mirachEngine/dependencies/glad/: glad-config.cmake
mirachEngine/dependencies/imgui/: imgui-config.cmake
mirachEngine/dependencies/lua/: lua-config.cmake
mirachEngine/dependencies/sdl/: sdl-config.cmake
mirachEngine/dependencies/sol/: sol-config.cmake
mirachEngine/doxygen/: Doxyfile
mirachEngine/doxygen/html/: _common_states_8h.html  _common_states_8h.js  _common_states_8h__dep__incl.map  _common_states_8h__dep__incl.md5  _common_states_8h__incl.map  _common_states_8h__incl.md5  _common_states_8h_source.html  _enemy_system_8h.html  _enemy_system_8h.js  _enemy_system_8h__dep__incl.map  _enemy_system_8h__dep__incl.md5  _enemy_system_8h__incl.map  _enemy_system_8h__incl.md5  _enemy_system_8h_source.html  _i_enemy_state_logic_8h.html  _i_enemy_state_logic_8h.js  _i_enemy_state_logic_8h__dep__incl.map  _i_enemy_state_logic_8h__dep__incl.md5  _i_enemy_state_logic_8h__incl.map  _i_enemy_state_logic_8h__incl.md5  _i_enemy_state_logic_8h_source.html  _m_d2_8cpp.html  _m_d2_8cpp.js  _m_d2_8cpp__incl.map  _m_d2_8cpp__incl.md5  _m_d2_8hpp.html  _m_d2_8hpp.js  _m_d2_8hpp__dep__incl.map  _m_d2_8hpp__dep__incl.md5  _m_d2_8hpp__incl.map  _m_d2_8hpp__incl.md5  _m_d2_8hpp_source.html  (+1953 more)
mirachEngine/include/: assets.h  configuration.h  lua_wrapper.h
mirachEngine/shaders/: 3DimageFTP_FS.glsl  3DimageFTP_VS.glsl  objectVS.glsl  terrainVS.glsl
mirachEngine/src/: assets.cpp  configuration.cpp  mirach.cpp
(+1390 files in other folders)
